--- a/web-container/pom.xml
+++ b/web-container/pom.xml
@@ -11,7 +11,7 @@
         <relativePath>../</relativePath>
     </parent>
 
-    <artifactId>swarm-scopito-marketplace</artifactId>
+    <artifactId>web-container</artifactId>
     <packaging>war</packaging>
 
     <dependencies>
