--- a/domain-model/pom.xml
+++ b/domain-model/pom.xml
@@ -31,5 +31,10 @@
             <groupId>org.wildfly.swarm</groupId>
             <artifactId>logging</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.scopito.marketplace.domainmodel</groupId>
+            <artifactId>domain-model</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
